# hopper_face

./: Cargo.toml  Makefile  README.md  crates.js  cross_build  deploy  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rustdoc.yml
direct/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html  type.Result.html
driver/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html  type.Result.html
examples/: demo.rs
hopper_face/: all.html  constant.ALL_COLORS.html  constant.BIGGER_BOTTOM_INDEX.html  constant.BIGGER_RING_PIXEL_COUNT.html  constant.BIGGER_TOP_INDEX.html  constant.BLUE.html  constant.BRIGHT_BLUE.html  constant.BRIGHT_COLORS.html  constant.BRIGHT_GREEN.html  constant.BRIGHT_PURPLE.html  constant.BRIGHT_RED.html  constant.BRIGHT_YELLOW.html  constant.GREEN.html  constant.NORMAL_COLORS.html  constant.PIXEL_COUNT.html  constant.PURPLE.html  constant.RED.html  constant.SMALLER_BOTTOM_INDEX.html  constant.SMALLER_RING_PIXEL_COUNT.html  constant.SMALLER_TOP_INDEX.html  constant.YELLOW.html  enum.LedControllerError.html  index.html  sidebar-items.js  struct.ColorPacket.html  struct.FaceController.html  struct.LedController.html  struct.RGB.html  trait.MpscChannelHelper.html
hopper_face/animations/: enum.Animation.html  index.html  sidebar-items.js  struct.Breathing.html  struct.CountDownAnimation.html  struct.CycleColors.html  struct.LarsonScanner.html  (+3 more)
simple/: all.html  fn.main.html  index.html  struct.Args.html  type.Result.html
src/: animations.rs  driver.rs  lib.rs
(+62 files in other folders)
