[package]
name = "hopper_face"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs-rs = "1.1.1"
serialport = { version = "4.0.1", default-features = false }
thiserror = "1.0"
ctrlc = "3.1"
clap = "3.0.0-beta.2"
