[package]
name = "hopper_face"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs-rs = "1.1.1"
serialport = { version = "4.0.1", default-features = false }
thiserror = "1.0"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
ctrlc = "3.1"
rand = "0.8.5"
